[gd_scene load_steps=10 format=3 uid="uid://difyp5rmner5q"]

[ext_resource type="Script" path="res://main.gd" id="1_1t3vb"]
[ext_resource type="Texture2D" uid="uid://i6w0vsoe5map" path="res://circle.png" id="3_meb0l"]
[ext_resource type="Shader" path="res://particles.gdshader" id="3_ru6er"]
[ext_resource type="Script" path="res://zoom_camera.gd" id="4_fc4cd"]
[ext_resource type="PackedScene" uid="uid://dbh33xl6dc1jv" path="res://control.tscn" id="4_vub4m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ky3ti"]
shader = ExtResource("3_ru6er")
shader_parameter/vw_size = null
shader_parameter/scale = null
shader_parameter/grid_size = null
shader_parameter/num_particles = null

[sub_resource type="Gradient" id="Gradient_746vi"]
offsets = PackedFloat32Array(0, 0.56213, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.586742, 0.347528, 0.591551, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_asp67"]
gradient = SubResource("Gradient_746vi")

[sub_resource type="Environment" id="Environment_o64oc"]
background_mode = 3
glow_enabled = true
glow_intensity = 1.5
glow_strength = 1.05
glow_bloom = 0.1
glow_blend_mode = 1
glow_hdr_scale = 1.2
adjustment_color_correction = SubResource("GradientTexture2D_asp67")

[node name="Main" type="Node2D"]
script = ExtResource("1_1t3vb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
text = "FPS: 0"

[node name="Control" parent="CanvasLayer" instance=ExtResource("4_vub4m")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 15.0
offset_top = 27.0
offset_right = 239.0
offset_bottom = 227.0
grow_horizontal = 1
grow_vertical = 1

[node name="ParticlesGPU" type="GPUParticles2D" parent="."]
process_material = SubResource("ShaderMaterial_ky3ti")
texture = ExtResource("3_meb0l")
fixed_fps = 144
visibility_rect = Rect2(0, 0, 6000, 6000)

[node name="ZoomCamera" type="Camera2D" parent="."]
zoom = Vector2(1.3, 1.3)
script = ExtResource("4_fc4cd")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_o64oc")

[connection signal="change_common" from="CanvasLayer/Control" to="." method="_on_control_change_common"]
[connection signal="change_num_particles" from="CanvasLayer/Control" to="." method="_on_control_change_num_particles"]
[connection signal="regen_images" from="CanvasLayer/Control" to="." method="_on_control_regen_images"]
[connection signal="regen_matrix" from="CanvasLayer/Control" to="." method="_on_control_regen_matrix"]
